Added Apollo Client, query for asking about Home page data, and connected it with STRAPI.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.1",
     "@chakra-ui/react": "^1.6.5",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
@@ -16,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "framer-motion": "^4.1.17",
+    "graphql": "^15.5.1",
     "next": "11.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
